--- a/CODEOWNERS
+++ b/CODEOWNERS
@@ -1,14 +1,15 @@
 # access files
-CODEOWNERS          @vpayno
+CODEOWNERS               @vpayno
 
 # CI files
-/.github/           @vpayno
+/.github/                @vpayno
+/.gitlab-ci.yaml~        @vpayno
 
 # sensitive documentation
-LICENSE             @vpayno
-README.md           @vpayno
-CHANGELOG.md        @vpayno
+LICENSE                  @vpayno
+README.md                @vpayno
+CHANGELOG.md             @vpayno
 
 # tool configuration files
-.gitignore          @vpayno
-cliff.toml          @vpayno
+.gitignore               @vpayno
+cliff.toml               @vpayno
