ci: add yaml workflow

--- a/CODEOWNERS
+++ b/CODEOWNERS
@@ -13,3 +13,4 @@ CHANGELOG.md             @vpayno
 # tool configuration files
 .gitignore               @vpayno
 cliff.toml               @vpayno
+.yamllint.yaml           @vpayno
