--- a/cliff.toml
+++ b/cliff.toml
@@ -70,6 +70,7 @@ commit_parsers = [
   { message = "^chore", group = "<!-- 8 -->⚙️ Miscellaneous Tasks" },
   { body = ".*security", group = "<!-- 9 -->🛡️ Security" },
   { message = "^revert", group = "<!-- 10 -->◀️ Revert" },
+  { message = "^arduino", group = "<!-- 11 -->∞ Arduino" },
 ]
 # protect breaking changes from being skipped due to matching a skipping commit_parser
 protect_breaking_commits = false
