--- a/cliff.toml
+++ b/cliff.toml
@@ -71,6 +71,7 @@ commit_parsers = [
   { body = ".*security", group = "<!-- 9 -->🛡️ Security" },
   { message = "^revert", group = "<!-- 10 -->◀️ Revert" },
   { message = "^arduino", group = "<!-- 11 -->∞ Arduino" },
+  { message = "^rust", group = "<!-- 12 -->🦀 Rust" },
 ]
 # protect breaking changes from being skipped due to matching a skipping commit_parser
 protect_breaking_commits = false
