--- a/.github/workflows/rust.yaml
+++ b/.github/workflows/rust.yaml
@@ -68,7 +68,7 @@ jobs:
           RUSTC_WRAPPER: "sccache"
         run: |
           ./.github/citools/debian-install-deps.sh
-          cargo clippy --all-features --message-format=json | clippy-sarif | tee rust-clippy-results.sarif | sarif-fmt
+          cargo clippy --examples --message-format=json | clippy-sarif | tee rust-clippy-results.sarif | sarif-fmt
       - name: Upload analysis results to GitHub
         if: false
         uses: github/codeql-action/upload-sarif@v3
@@ -81,7 +81,7 @@ jobs:
         run: |
           {
             printf "\`\`\`text\n"
-            cargo clippy --all-features |& strip-ansi || true
+            cargo clippy --examples |& strip-ansi || true
             printf "\`\`\`\n"
           } |& tee -a "${GITHUB_STEP_SUMMARY}"
       - name: Cargo Check
@@ -90,7 +90,7 @@ jobs:
         run: |
           {
             printf "\`\`\`text\n"
-            cargo check --verbose |& strip-ansi || true
+            cargo check --examples --verbose |& strip-ansi || true
             printf "\`\`\`\n"
           } |& tee -a "${GITHUB_STEP_SUMMARY}"
       - name: Cargo Tests
