--- a/cliff.toml
+++ b/cliff.toml
@@ -72,6 +72,7 @@ commit_parsers = [
   { message = "^revert", group = "<!-- 10 -->◀️ Revert" },
   { message = "^arduino", group = "<!-- 11 -->∞ Arduino" },
   { message = "^rust", group = "<!-- 12 -->🦀 Rust" },
+  { message = "^tinygo", group = "<!-- 13 -->🏁 TinyGo" },
 ]
 # protect breaking changes from being skipped due to matching a skipping commit_parser
 protect_breaking_commits = false
