chore: fix cliff.toml config

--- a/cliff.toml
+++ b/cliff.toml
@@ -1,4 +1,5 @@
-ocs/configuration
+# git-cliff ~ default configuration file
+# https://git-cliff.org/docs/configuration
 #
 # Lines starting with "#" are comments.
 # Configuration options are organized into tables and keys.
