tinygo: add tinygo sourcecode submodule

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "circuitpython/lib/Adafruit_CircuitPython_NeoPixel"]
 	path = circuitpython/lib/Adafruit_CircuitPython_NeoPixel
 	url = https://github.com/adafruit/Adafruit_CircuitPython_NeoPixel
+[submodule "tinygo/lib/tinygo"]
+	path = tinygo/lib/tinygo
+	url = https://github.com/tinygo-org/tinygo
