--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "tinygo/lib/tinygo"]
 	path = tinygo/lib/tinygo
 	url = https://github.com/tinygo-org/tinygo
+[submodule "tinygo/lib/drivers"]
+	path = tinygo/lib/drivers
+	url = https://github.com/tinygo-org/drivers
